--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .gallery-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   column-gap: 2rem;
   row-gap: 2rem;
   max-width: 900px;
@@ -19,7 +19,6 @@ form {
 }
 
 form input[type="search"] {
-    width: 50%;
     height: 45px;
     border: 2px solid grey;
     font-size: 12px;
@@ -29,4 +28,10 @@ form input[type="search"] {
 
 form input[type="search"]:active {
     border: 2px dashed green;
+}
+
+@media (min-width: 768px) {
+    form input[type="search"] {
+       width: 60%
+    }
 }
