--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@
   margin-right: auto;
 }
 
+img {
+    border: 3px solid white;
+    transition: box-shadow .5s ease-in-out;
+}
+
+img:hover {
+    box-shadow: 5px 10px 10px rgb(52, 50, 112);
+}
+
 form {
     max-width: 900px;
     margin-left: auto;
@@ -29,6 +38,12 @@ form input[type="search"] {
 form input[type="search"]:active {
     border: 2px dashed green;
 }
+
+body {
+    background-color: rgb(101, 101, 160);
+}
+
+
 
 @media (min-width: 768px) {
     form input[type="search"] {
