--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   max-width: 900px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 3rem;
 }
 
 img {
@@ -25,18 +26,22 @@ form {
     justify-content: center;
     margin-bottom: 2rem;
     margin-top: 2rem;
+   
 }
 
 form input[type="search"] {
     height: 45px;
-    border: 2px solid grey;
+    border: 2px solid rgb(52, 50, 112);
     font-size: 12px;
     border-radius: 5px;
     padding-left: 1rem;
+    color:rgb(52, 50, 112);
+    transition: outline .5s ease-in, box-shadow .7s ease;
 }
 
-form input[type="search"]:active {
-    border: 2px dashed green;
+form input[type="search"]:focus {
+    outline: 1px solid rgb(52, 50, 112);
+    box-shadow: 5px 10px 10px rgb(52, 50, 112);
 }
 
 body {
