remove form element

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ img:hover {
     box-shadow: 5px 10px 10px rgb(52, 50, 112);
 }
 
-form {
+.input-container {
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
@@ -29,7 +29,7 @@ form {
    
 }
 
-form input[type="search"] {
+ input[type="search"] {
     height: 45px;
     border: 2px solid rgb(52, 50, 112);
     font-size: 12px;
@@ -39,7 +39,7 @@ form input[type="search"] {
     transition: outline .5s ease-in, box-shadow .7s ease;
 }
 
-form input[type="search"]:focus {
+ input[type="search"]:focus {
     outline: 1px solid rgb(52, 50, 112);
     box-shadow: 5px 10px 10px rgb(52, 50, 112);
 }
@@ -51,7 +51,7 @@ body {
 
 
 @media (min-width: 768px) {
-    form input[type="search"] {
+    .input-container input[type="search"] {
        width: 60%
     }
 }
